finished product is here

--- a/paint_site/paint_app/templates/color_picker.html
+++ b/paint_site/paint_app/templates/color_picker.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Color Picker</title>
-        <body style="background-color: rgb ({{ red }}, {{ green }}, {{ blue }});">
+        <body style="background-color: rgb({{ red }}, {{ green }}, {{ blue }});">
             <h3> I have done it again!!</h3>
             <h4> Enter an intger between 0 and 255 for each of the colors below: </h4>
             <form method="POST" action="{% url 'paint' %}">
@@ -28,4 +28,4 @@
             </form>
         </body>    
     </head>
-        
+   </html>     
